--- a/estilos/estilo-encabezado.css
+++ b/estilos/estilo-encabezado.css
@@ -1,13 +1,13 @@
+
 body{
-    font-family: sans-serif;
+    font-family: 'Anton', sans-serif;
     margin: 0;
 }
-header{
+#main-header{
     display: flex;
     min-height: 70px;
     justify-content: space-between;
     align-items: center;
-    padding: 3px;
 }
 .logo{
     display: flex;
@@ -32,17 +32,85 @@ nav a:hover{
 .row{
     padding: 30px;
 }
+.card{
+width: 100%;
+border-radius: 10px;
+background-color:rgba(72, 70, 69, 0.1);
+overflow: hidden;
+cursor: default;
+transition: all 400ms ease;
+height: auto;
+align-items: center;
+}
+.card:hover{
+    box-shadow: 5px 5px 20px ;
+    transform: translateY(-3%);
+}
 
+.card-text{
+    color: #EABE3F;
+    font-family:'Alfa Slab One';
+    font-size: 250%;
+    text-align: center;
+}
+
+.card-text-2{
+    font-size: x-small;
+    line-height: 0.7;
+   
+}
+.card-title{
+    font-family: 'Anton', sans-serif;
+    color: brown;
+    text-align: center;
+    font-size: 180%;
+}
 .title{
+padding: 50px 50px;
+display: flex;
+justify-content: center;
+}
+.menu  {
+    font-family: 'Crimson Pro', serif;
+}
+.nav__list{
+    width: 300px;
+    background: #F1E6E3;
+    border-radius: 0 16px 16px 0;
+}
+
+.list_principal{
+width: 100%;
+height: 100vh;
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+.list__item{
+list-style: none;
+width: 100%;
+text-align: center;
+}
+.list_button{
     display: flex;
     align-items: center;
-    padding: 30px;
+    gap:  1em;
+    width: 70%;
+    margin: 0 auto;
 }
-@media (max-width:700px){
+.nav_link{
+    color: #303443;
+    display: block;
+    padding: 15px 0;
+    text-decoration: none;    
+}
+
+
+@media (max-width:100%){
     header {
         flex-direction: column;
     }
     nav{
         padding: 10px 0px;
-    }
+    }   
 }
