--- a/estilos/estilo-usuario.css
+++ b/estilos/estilo-usuario.css
@@ -134,23 +134,12 @@ a.seleted{
     width: 250px;
 }
 .card-img{
-    width: 60%;
-    height: 50vh;
-    border-radius: 20px;
-    transform: translateX(150px)
-}
-#left, #right {
-    display: inline-block;
-    width: 45%;
-    height: 100%;
-}
-.col-sm-6 img{
-    width: 100%;
+    width: 50%;
     height: 40vh;
-}
-.inicio div{
-    padding: 20px;
-}
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    transform: translateX(30px)}
 @media screen and (max-width: 760px) {
     .body__move{
         margin-left: 0px;
