--- a/estilos/estilo-encabezado.css
+++ b/estilos/estilo-encabezado.css
@@ -1,4 +1,7 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+
+
 body{
     font-family: 'Anton', sans-serif;
     margin: 0;
@@ -25,7 +28,7 @@ nav a{
     padding-right: 10px;
 }
 nav a:hover{
-    color: white;
+    color: red;
 
 }
 
@@ -104,7 +107,41 @@ text-align: center;
     padding: 15px 0;
     text-decoration: none;    
 }
+#principal h1{
+    font-family: 'Bungee Shade', cursive;    
+    font-size: 350%;
+    padding: 20px;
+    text-align: center;
+}
+body section{
+    padding: 20px;
+}
+.section-columns >  div{
+    padding: 20px;
+    display: inline-block;
+}
+.maps  {
+    width: 70%;
+    height: auto;
+}
+.maps iframe{
+    border-radius: 25px;
 
+}
+.sec-text{
+    width: 28%;
+    height: auto;
+    font-family: 'Berkshire Swash', cursive;
+    color: white;
+    vertical-align: top;
+}
+
+.ubication{
+    background-color: #4B4B4B;
+}
+.ubication h1{
+    color: white;
+}
 
 @media (max-width:100%){
     header {
